# tugas-robotika-2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: pid_params.yaml
data/: target.txt
description/: diff_drive_description.urdf
launch/: display.launch.py  file_handling.launch.py  pid_controller.launch.py  robot_controller.launch.py  simulation_with_navigation.launch.py
src/PIDNavigator/PIDNavigator/: file_handling.py
src/RobotController/RobotController/: robot_controller.py
src/diff_drive_implementation/: CMakeLists.txt  LICENSE  package.xml  setup.cfg  setup.py
src/diff_drive_implementation/config/: navigator_params.yaml
src/diff_drive_implementation/data/: target.txt
src/diff_drive_implementation/launch/: display.launch.py  file_handling.launch.py  pid_controller.launch.py  robot_controller.launch.py  simulation_with_navigation.launch.py
src/diff_drive_implementation/src/diff_drive_implementation/: __init__.py  file_handling.py
src/tugas_robotika/: __init__.py  file_handling.py  pid_controller.py  robot_controller.py
